# gke-service-template

./: .gitignore  cloudbuild_ci.yaml  dockerfile.ci  pyproject.toml  readme.md
src/: build.sh  cloudbuild.yaml  dockerfile
src/myapp/: bootstrap.sh  main.py
src/myapp/common/: constants.py
src/myapp/configs/: __init__.py  app.yaml  logging.yaml
src/myapp/controllers/: __init__.py  controller_base.py  foo_controller.py
src/myapp/endpoints/: foo_endpoint.py  version.py
src/myapp/services/: __init__.py
